# Stenokey

./: Readme.md
Firmware/StenoFW/Stenokey/: CMakeCache.txt  CMakeLists.txt  Makefile  Stenokey.c  Stenokey.dis  Stenokey.elf  Stenokey.elf.map  Stenokey.hex  Stenokey.pio  Stenokey.pio.h  Stenokey.uf2  cmake_install.cmake
Firmware/StenoFW/Stenokey/elf2uf2/: CMakeCache.txt  Makefile  cmake_install.cmake  elf2uf2
Firmware/StenoFW/Stenokey/elf2uf2/boot_uf2_headers/: Makefile  cmake_install.cmake
Firmware/StenoFW/Stenokey/pico-sdk/: Makefile  cmake_install.cmake
Firmware/StenoFW/Stenokey/pico-sdk/docs/: Makefile  cmake_install.cmake
Firmware/StenoFW/Stenokey/pico-sdk/src/: Makefile  cmake_install.cmake
Firmware/StenoFW/Stenokey/pico-sdk/src/common/: Makefile  cmake_install.cmake
Firmware/StenoFW/Stenokey/pico-sdk/src/common/boot_picoboot/: Makefile  cmake_install.cmake
Firmware/StenoFW/Stenokey/pico-sdk/src/common/boot_uf2/: Makefile  cmake_install.cmake
Firmware/StenoFW/Stenokey/pico-sdk/src/common/pico_base/: Makefile  cmake_install.cmake
Firmware/StenoFW/Stenokey/pico-sdk/src/common/pico_binary_info/: Makefile  cmake_install.cmake
Firmware/StenoFW/Stenokey/pico-sdk/src/common/pico_bit_ops/: Makefile  cmake_install.cmake
Firmware/StenoFW/Stenokey/pico-sdk/src/common/pico_divider/: Makefile  cmake_install.cmake
Firmware/StenoFW/Stenokey/pico-sdk/src/rp2040/: Makefile  cmake_install.cmake
Firmware/StenoFW/Stenokey/pico-sdk/src/rp2_common/: Makefile  cmake_install.cmake
Firmware/StenoFW/Stenokey/pico-sdk/tools/: Makefile  cmake_install.cmake
(+154 files in other folders)
